Estilização do menu de navegação

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <nav class="menu">
             <a href="index.html"><img src="images/logo-loja-tips.png" alt="Logo da loja" /></a>
             <ul>
-                <li>Home</li>
-                <li>Shop</li>
-                <li>Blog</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
                 <i class="fa-solid fa-bag-shopping"></i>
             </ul>
         </nav>
