Ajuste do botão ShopMe

--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
         </nav>
         <hr/>
         <div class="banner">
-            <span>
+            <div>
                 <h3>Trade-in-Offer</h3>
                 <h1>Super value deals</h1>
                 <h1>On all products</h1>
                 <p>Save more with coupons & up to 70% off!</p>
-                <button>Shop Now</button><img src="./images/button.png" alt="">
-            </span>
-            <span>
+                <div class="button-shop">
+                    <a href="#">Shop Now</a><img src="./images/button.png" alt="">
+                </div>
+            </div>
+            <div>
                 <img src="./images/hero-alisson.png" alt="Imagem do professor Alisson">
-            </span>
+            </div>
         </div>
     </header>
     <main></main>
